# github-action-demo

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: github-actions-demo.yml
